--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "vite-project",
   "private": true,
+  "homepage": "https://bleir.github.io/testGithubActions",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
